--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <label for="city">Search for City:</label>
             <input type="text" class="form-control" id="cityInput" name="cityName" value="">
             <button type="button" id="btnCity" class="btn btn-primary"><i class="fa fa-search"></i></button>
+            <button type="button" id="btnClear" class="btn btn-primary">Clear List</button>
          </div> <!-- Close div for form --> 
          </form> <!-- Close form-->
         <!--</div> Close div for search -->
